// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        style="padding: 0.25em 0px;"
      >
        <button
          class="MuiButtonBase-root"
          tabindex="0"
          type="button"
        >
          Open Dropdown
          <span
            class="Hook-arrow"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown opens dropdown on trigger click 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        style="padding: 0.25em 0px;"
      >
        <button
          class="MuiButtonBase-root"
          tabindex="0"
          type="button"
        >
          Open Dropdown
          <span
            class="Hook-arrow"
          />
        </button>
      </div>
      <div
        class="MuiModal-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root MuiBackdrop-invisible"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation8 MuiPopover-paper"
          role="document"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
          tabindex="-1"
        >
          <div
            style="min-width: 0;"
          >
            <li
              class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
              role="menuitem"
              tabindex="-1"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                Option 1
              </button>
            </li>
            <li
              class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
              role="menuitem"
              tabindex="-1"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                Option 2
              </button>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown render as open 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        style="padding: 0.25em 0px;"
      >
        <button
          class="MuiButtonBase-root"
          tabindex="0"
          type="button"
        >
          Open Dropdown
          <span
            class="Hook-arrow"
          />
        </button>
      </div>
      <div
        class="MuiModal-root"
        role="presentation"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root MuiBackdrop-invisible"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation8 MuiPopover-paper"
          role="document"
          style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; top: 16px; left: 16px; transform-origin: -16px -16px;"
          tabindex="-1"
        >
          <div
            style="min-width: auto;"
          >
            <li
              class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
              role="menuitem"
              tabindex="-1"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                Option 1
              </button>
            </li>
            <li
              class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
              role="menuitem"
              tabindex="-1"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                Option 2
              </button>
            </li>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
